# haiv_stt_decoder_v2

./: .gitignore  README.md  client_test_examples.py  gpu_optimized_stt_server.py  keyword_boosting_client_example.py  large_only_optimized_server.py  pm2_control.sh  prd.md  pyproject.toml  requirements-frozen.txt  requirements.txt  run_gpu_server.py  setup_cudnn_env.sh  setup_environment.sh  start_pm2.sh  stt-decoder.config.js  stt_hallucination_report.txt  test_20_clients_performance.py  test_concurrent_clients.py  test_converted_audio.py  test_immediate_batch_response.py  test_korean_natural_batch.py  test_large_only_optimization.py  test_model_selection.py  test_nemo_improved.py  test_parallel_batch_performance.py  test_real_korean_audio.py  test_real_wav_client.py  test_single_file_performance.py  test_wav_stt.py
docs/: api_specification.md  performance_test_results.md
src/api/: __init__.py  audio_utils.py  base_stt_service.py  batch_service.py  extreme_gpu_optimization.py  models.py  nemo_stt_service.py  post_processing_correction.py  server.py  stt_factory.py  stt_service.py  whisper_stt_adapter.py
src/core/: config.py
src/pipeline/: adaptive_realtime.py  batch_processor.py  realtime.py  realtime_optimized.py
src/utils/: audio_utils.py  gpu_optimizer.py  korean_processor.py  performance_optimizer.py  rtx_4090_config.py
